Add the PDF versions of paper draft and picturesneeded.

--- a/PaperDraft/picturesneeded.htm
+++ b/PaperDraft/picturesneeded.htm
@@ -36,6 +36,11 @@ border-collapse: collapse;
 </li>
 <li>Note that one would never actually use disks with such low half-lives, but they are needed to show the phenomena.<br />
 </li>
+<li>Aesthetic change: use black dots and much thicker lines on the png plots.<br />
+</li>
+<li>Aesthetic change: increase size of headings and axis labels on plots.<br />
+</li>
+<li>Aesthetic bugfix: make all the numbers on the percent lines the same color, i.e., black.</li>
 <li>X half-life scales 2-1000 or 2-100.</li>
 <li>Legends upper right (if I can force legends at all; may have to be manual annotations, yuck).</li>
 <li>Attempt consistent color labeling for number of copies, but not sure this is reasonable in R.</li>
